src/app/layout/pages/home/home.component.scss
.banner {
  background-color: var(--bgPrimaryColor);
  overflow: hidden;
  .my_title {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: flex-end;
    // padding-left: 25px;
    p {
      font-size: large;
    }
  }
  .image {
    height: 500px;
  }
}

.container {
  .btn_shadow {
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
      rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
  }
  .alignjustifycenter {
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .out_box {
    height: 400px;
    border-radius: 8px;
    display: flex;
    flex-direction: column;
    background-repeat: no-repeat;
    background-size: contain;
  }

  .in_box {
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 8px;
  }
  .women {
    background-color: rgb(252, 245, 243);

    background-image: url(/assets/images/modals/Lady_shopping.png);
    background-position: bottom;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    transition: all 0.5s ease-in-out;

    &:hover {
      background-size: cover;
      background-color: rgb(253, 198, 183);
    }
  }
  .watch {
    background-color: rgb(252, 245, 243);
    background-image: url(/assets/images/accessory/watch-1.png);
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    background-position: center;
    transition: all 0.5s ease-in-out;

    &:hover {
      background-size: cover;
      background-color: rgb(253, 198, 183);
    }
  }
  .men {
    background-color: rgb(252, 245, 243);
    background-image: url(/assets/images/modals/gent-2.png);
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    transition: all 0.5s ease-in-out;

    &:hover {
      background-size: cover;
      background-color: rgb(253, 198, 183);
    }
  }

  .shoe {
    background-color: rgb(252, 245, 243);
    background-image: url(/assets/images/modals/shoe.png);
    background-size: contain;
    background-repeat: no-repeat;
    background-position: right;
    transition: all 0.5s ease-in-out;

    &:hover {
      background-size: cover;
      background-color: rgb(253, 198, 183);
    }
  }

  .bag {
    transition: all 0.5s ease-in-out;
    background-color: rgb(252, 245, 243);
    background-image: url(/assets/images/modals/bag.png);
    background-size: contain;
    background-repeat: no-repeat;
    background-position: right;

    &:hover {
      background-size: cover;
      background-color: rgb(253, 198, 183);
    }
  }

  .headings {
    text-align: center;
  }
}

@media (max-width: 767px) {
  /* CSS styles for mobile screens */
  /* Place your mobile-specific styles here */
  .myCategories {
    display: none;
  }
  // .myCategories {
  //   .out_box {
  //     height: 50px;
  //     // display: block;
  //   }
  // }
}

